# taskio

./: .gitignore  README.md  pyproject.toml
app/: errors.py  main.py  menu.py  models.py  task_repository.py  task_service.py
tests/: test_task_service.py
